syntax = "proto3";

option java_package = "net.yslibrary.monotweety.data.setting";
option java_multiple_files = true;

message SettingsPreferences {
  bool notificationEnabled = 1;
  bool footerEnabled = 2;
  string footerText = 3;
  bool timelineAppEnabled = 4;
  string timelineAppPackageName = 5;
}
